# pdf-table-extractor-tool

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: Home.py  blueprint.csv  blueprint.xlsx
app/src/data_extraction/: extract_latest_id.py  extract_pdfs.py
app/src/data_scraping/: data_scraping.py
